# bench

./: .gitignore  README.md  main.py  main_carrying_memory.py  main_stock_oasis.py  main_vllm.py  pyproject.toml
configs/: config.yaml
configs/agent/: auction_arena.yaml  auction_arena_random.yaml  cognitive_biases.yaml  digitmat.yaml  econagent.yaml  econagent_staticbaseline.yaml  emotionbench.yaml  lm_caricature.yaml  oasis.yaml  psychobench.yaml  psychobench_random.yaml  sotopia.yaml  sotopia_random.yaml  sotopia_vllm.yaml  stockagent.yaml
configs/task/: auction_arena.yaml  cognitive_biases.yaml  digitmat.yaml  econagent.yaml  emotionbench.yaml  lm_caricature.yaml  oasis.yaml  psychobench.yaml  sotopia.yaml  stockagent.yaml
example/: main_stock_oasis.py
src/kujira/agent/: auction_arena.py  cognitive_biases_agent.py  digitmat_agent.py  econagent.py  emotionagent.py  lm_caricature.py  oasisagent.py  psychobench.py  sotopia.py  stockagent.py
src/kujira/env/EmotionBench/: emotionenv.py
src/kujira/env/auction_arena/: auction_env.py  bidder.py  observation.py  prompt_base.py
src/kujira/env/cognitive_biases/: cognitive_biases_env.py
src/kujira/env/econagent/: econenv.py
src/kujira/env/lm_caricature/: lm_caricature_env.py
src/kujira/env/oasis/: snsenv.py
src/kujira/env/psychobench/: analysis.py  data_types.py  observation.py  psychobench_env.py  sixteen_personality.py  test_results.py
src/kujira/env/sotopia/: _generate.py  _server.py  environment.py
src/kujira/env/stockagent/: stockenv.py
src/shachi/: base.py
src/shachi/agent/: auction_arena.py  cognitive_biases_agent.py  digitmat_agent.py  econagent.py  emotionagent.py  lm_caricature.py  oasisagent.py  psychobench.py  sotopia.py  stockagent.py
src/shachi/env/EmotionBench/: emotionenv.py
src/shachi/env/auction_arena/: auction_env.py  bidder.py  observation.py
(+12 files in other folders)
