[project]
name = "shachi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = [
    # base
    "fire>=0.7.0",
    "litellm>=1.61.3",
    "lz4",
    "matplotlib",
    "mypy>=1.15.0",
    "numpy",
    "openai",
    "python-dateutil",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    # experiment
    "hydra-core",
    # memory
    "camel-ai==0.2.2",
    "pillow",
    "mem0ai==0.1.70",
    # stockagent
    "pandas",
    "colorama",
    "protobuf>=4,<5",
    "tiktoken",
    "procoder @ git+https://github.com/dhh1995/PromptCoder.git#egg=PromptCoder",
    "openpyxl",
    # OASIS
    "igraph==0.11.6",
    "neo4j==5.23.0",
    "sentence-transformers",
    "unstructured",
    # EmotionBench
    # cognitive-biases-in-llms
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "umap>=0.1.1",
    # SocioDojo
    "selenium>=4.30.0",
    # Sotopia
    "sotopia==0.1.4",
    # AuctionArena
    "inflect>=7.5.0",
    "trueskill>=0.4.5",
    # lm_caricature
    "nltk>=3.9.1",
    "types-python-dateutil>=2.9.0.20250516",
    "types-pyyaml>=6.0.12.20250516",
    "vllm>=0.8.5.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_generics = false
exclude = ".venv|venv|build|docs|tutorial|data|examples|cache"

[tool.ruff]
line-length = 99
target-version = "py310"
extend-exclude = [
    "src/shachi/env/econagent/dep",
    "src/shachi/env/lm_caricature/dep/",
]

[tool.hatch.metadata]
allow-direct-references = true
